# events-planner-agents

./: .gitignore  README.md  agents.md  pyproject.toml
.cache/42/: cache.db
events_agent/agents/web_surfer/: _multimodal_web_surfer.py  _prompts.py  _tool_definitions.py  page_script.js
events_agent/assistant/: calendar.py  default.py  events.py  primary.py  web_surfer.py
events_agent/client/: opensearch.py
events_agent/domain/: state.py
events_agent/graph/: events_registor_main.py  single.py  supervisor_main.py
events_agent/main/: run_single.py
events_agent/tools/: calendar.py  events.py  user_info.py  web_surfer.py
events_agent/utils/: lang.py
langgraph-app/: README.md
notebooks/: langgraph-basics.ipynb  langgraph-events-booking-assistant.ipynb  langgraph-multi-agents.ipynb  langgraph-platform-local.ipynb  openai-responses-api.ipynb  test.py
