# https://docs.astral.sh/ruff/configuration/

[project]
name = "events-planner-agents"
version = "0.1.0"
description = "Agents for Events Planner"
authors = [{ name = "Ilia Zlobin", email = "iliazlobin91@gmail.com" }]
# https://python-poetry.org/docs/pyproject/#dependencies
dependencies = ["sst", "colorlog", "dspy"]
# dependencies = ["sst", "colorlog"]
requires-python = ">=3.11,<3.12"

[tool.setuptools]
py-modules = []
include-package-data = true

[tool.uv.sources]
# sst = { git = "https://github.com/sst/sst.git", subdirectory = "sdk/python", branch = "dev" }
# dspy = { path = "/home/izlobin/.cache/pypoetry/virtualenvs/dspy-uiPObCtX-py3.10/lib/python3.10/site-packages/" }
# dspy = { path = "/home/izlobin/wd/events-planner-sst/github/dspy" }

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 160
indent-width = 4


target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["F541", "F722", "F821"]


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
# dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
